# ui-R

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
books/: grammatica_italiana_base.txt  logica_matematica_scienza.txt  racconti_brevi.txt
data/kg/: bigbang_kg.tsv  italian_core.tsv
docs/: ARCHITECTURE.md  COMPACT_GUIDE.md  DEMO.md  EDUCAZIONE_DISTRIBUITA.md  FILOSOFIA.md  GUIDA_FACILITATORI.md  ISTRUZIONI_USO.md  NUOVO_MATERIALE_DIDATTICO.md  PRESENTAZIONE_CIRCOSCRIZIONI_TORINO.md  PROMETEO GUIDA COMPLETA.md  ROADMAP.md  SLIDE_PRESENTAZIONE.md  STEERING.md  VISUAL_PERCEPTION_PHILOSOPHY.md
examples/: show_hexagram_glyphs.rs  visual_perception_test.rs
fractals/: INDEX.md
lessons/: 00_corpo.txt  01_emozioni.txt  02_mondo.txt  03_tempo.txt  04_relazioni.txt  05_pensiero.txt  06_azione.txt  07_qualita.txt  08_natura.txt  09_societa.txt  100_colori_sfumature_avanzate.txt  100_geometria_forme.txt  101_emozioni_sottili.txt  101_geometria_colori.txt  102_geometria_dimensioni.txt  102_qualita_gusto_avanzate.txt  103_fenomeni_luce.txt  103_geometria_spazio.txt  104_azioni_verbali.txt  104_geometria_qualita.txt  105_geometria_composizioni.txt  105_stati_acqua.txt  106_qualita_voce.txt  107_azioni_sguardo.txt  108_rettili_anfibi.txt  109_mammiferi_grandi.txt  10_esistenza.txt  110_mammiferi_piccoli.txt  111_erbe_aromatiche.txt  112_spezie.txt  113_dolci.txt  114_bevande.txt  115_pasti.txt  116_parentele_allargate.txt  117_condizioni_atmosferiche.txt  118_fenomeni_sonori.txt  119_azioni_mani.txt  11_composti.txt  120_azioni_bocca.txt  121_malattie.txt  (+225 more)
lessons/contrastive/: 01_gioia_tristezza.txt  02_luce_buio.txt  03_vicino_lontano.txt  04_forte_debole.txt  05_caldo_freddo.txt  06_dentro_fuori.txt  07_grande_piccolo.txt  08_alto_basso.txt  09_veloce_lento.txt  10_bello_brutto.txt  11_luce_buio_rinforzo.txt  12_caldo_freddo_rinforzo.txt  13_vicino_lontano_rinforzo.txt  14_forte_debole_rinforzo.txt  15_dentro_fuori_rinforzo.txt  16_alto_basso_rinforzo.txt  17_veloce_lento_rinforzo.txt  18_bello_brutto_rinforzo.txt
lessons/translation/: 01_calma_presenza.txt  (+11 more)
src/: android.rs  lib.rs  main.rs
(+54 files in other folders)
